# revenue-intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  security.py  semantic_layer.py  semantic_layer.yaml
backend/app/models/: __init__.py  audit.py  dimensions.py  facts.py  hubspot_integration.py  nl_semantic.py  phase5.py  phase6_governance.py  phase7.py  tenant.py
backend/app/schemas/: auth.py  customer.py  delivery_manager.py  ingest.py  project.py  query.py  revenue.py  tenant_directory.py
backend/app/services/: access_scope.py  admin_operations_service.py  audit_export_service.py  customer_hierarchy.py
backend/app/tasks/: celery_app.py  ingest_tasks.py  sync_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 20260403_0001_initial_schema.py  20260403_0002_phase2_analytics.py  20260406_0003_phase3_nl_query.py  20260406_0004_phase4_hubspot.py  20260406_0005_phase5.py  20260406_0006_phase6.py  20260408_0007_phase7.py  20260408_0008_manual_matrix_cells_dm_assignments.py  20260409_0009_dim_project.py  20260409_0010_revenue_variance_comment.py  20260410_0011_user_org_role_account_delivery_manager.py  20260410_0012_dim_customer_business_unit_division.py
backend/tests/: conftest.py
backend/tests/integration/: test_analytics_api.py  test_api_smoke.py  test_customers_api.py  test_delivery_managers_api.py  test_fact_uniqueness.py  test_hubspot_phase4.py  test_ingest_auth.py  (+13 more)
(+163 files in other folders)
